# roguesquerie

./: README.md  pyproject.toml  roguesquerie.bat  roguesquerie.sh
data/: actions.csv  armor.csv  careers.csv  characteristics.csv  descriptors.csv  difficulty-modifiers.csv  effect.csv  items.csv  skills.csv  weapons.csv
docs/design/: specification.md
roguesquerie/: __main__.py
roguesquerie/controllers/: task.py
roguesquerie/models/: character.py  monster.py  player.py
